--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 	  <header>
-				<center><h2 id="titPral">BIENVENIDO A CINE "ITO"</h2></center>
+				<center><h2 id="titPral">BIENVENIDO A CINE."ITO"</h2></center>
 			</header>
 			<nav id="main-nav">
               <h4>Cartelera</h4>
